--- a/TODOApplication/app/src/main/AndroidManifest.xml
+++ b/TODOApplication/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.todoapplication">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,7 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TODOApplication">
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".view.HomeActivity"
+            android:exported="false"
+            android:label="@string/title_activity_home"
+            android:theme="@style/Theme.TODOApplication.NoActionBar" />
+        <activity
+            android:name=".view.login.LoginActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
